test refactoring more data types supported